Update 기본 연산자와 수학.md

--- a/자바스크립트/기본 연산자와 수학.md
+++ b/자바스크립트/기본 연산자와 수학.md
@@ -20,10 +20,10 @@ alert( y - x ); // 2, 이항 마이너스 연산자는 뺄셈을 해줍니다.
 자바스크립트에서 지원하는 수학 연산자는 다음과 같습니다.
 
 덧셈 연산자 +,\
-뺄셈 연산자 -, 
-곱셈 연산자 *,
-나눗셈 연산자 /,
-나머지 연산자 %,
-거듭제곱 연산자 **
+뺄셈 연산자 -, \
+곱셈 연산자 *,\
+나눗셈 연산자 /,\
+나머지 연산자 %,\
+거듭제곱 연산자 **\
 
 
